# LifeRPG

./: .gitignore  BEGINNER_GUIDE.md  README.md  ou_rpg_offline_single_user_pitch_for_engineering.md  pyproject.toml  requirements.txt
ngp/: __init__.py  main.py
ngp/loops/: __init__.py  action.py  adjustment.py  analysis.py  reflection.py  suggestion.py
ngp/models/: __init__.py  capsule.py  completion.py  goal.py  journal.py  mission.py  player.py  redemption.py  reward.py  skill.py  streak.py  template.py
ngp/services/: __init__.py  capsule.py  cycle.py  export_import.py  goals.py  metrics.py  progression.py  rewards.py  statistics.py  storage.py  streaks.py  templates.py  visualization.py
ngp/ui/: __init__.py  dashboard.py  menu.py
ngp/utils/: __init__.py  plugins.py  themes.py  time_utils.py
